trabalhando com divisoes de conteudo

--- a/BarbeariaAlura/index.html
+++ b/BarbeariaAlura/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <img id="banner" src="imagens/banner.jpg" alt="">
+    <div class="principal">
     <h1>Sobre a Barbearia Alura</h1>
     <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o
         que há de melhor para o
@@ -21,7 +22,9 @@
     <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O
         atendimento possui padrão de
         excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+    </div>
 
+    <div class="beneficios">
     <h2>Beneficios</h2>
     <ul>
         <li class="itens">Atendimento</li>
@@ -29,6 +32,8 @@
         <li class="itens">Espaço Diferenciado</li>
         <li class="itens">Profissionais Qualificados</li>
     </ul>
+    <img src="imagens/beneficios.jpg" alt="">
+</div>
 </body>
 
 </html>
