--- a/BarbeariaAlura/index.html
+++ b/BarbeariaAlura/index.html
@@ -11,32 +11,33 @@
 
 <body>
     <header>
-<h1>Barbearia Alura</h1>
+        <h1>Barbearia Alura</h1>
     </header>
     <img id="banner" src="imagens/banner.jpg" alt="">
     <div class="principal">
         <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h1>
-        <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o
-            que há de melhor para o
-            seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a
-            cada
-            dia.</p>
-        <p id="missao"><em> Nossa missão é: <strong> "Proporcionar auto-estima e qualidade de vida aos
-                    clientes"</strong>.</em></p>
-        <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O
-            atendimento possui padrão de
-            excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+            <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o
+                que há de melhor para o
+                seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos
+                clientes a
+                cada
+                dia.</p>
+            <p id="missao"><em> Nossa missão é: <strong> "Proporcionar auto-estima e qualidade de vida aos
+                        clientes"</strong>.</em></p>
+            <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O
+                atendimento possui padrão de
+                excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
     </div>
 
     <div class="beneficios">
         <h3 class="titulo-centralizado">Beneficios</h2>
-        <ul>
-            <li class="itens">Atendimento</li>
-            <li class="itens">Localização</li>
-            <li class="itens">Espaço Diferenciado</li>
-            <li class="itens">Profissionais Qualificados</li>
-        </ul>
-        <img class="imagemBeneficios" src="imagens/beneficios.jpg" alt="">
+            <ul>
+                <li class="itens">Atendimento</li>
+                <li class="itens">Localização</li>
+                <li class="itens">Espaço Diferenciado</li>
+                <li class="itens">Profissionais Qualificados</li>
+            </ul>
+            <img class="imagemBeneficios" src="imagens/beneficios.jpg" alt="">
     </div>
 </body>
 
