--- a/BarbeariaAlura/produtos.html
+++ b/BarbeariaAlura/produtos.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta title="Produtos - Barbearia Alura ">
-        <link rel="stylesheet" href="reset.css" >
-        <link rel="stylesheet" href="produtos.css" >
-    </head>
-    <body>
-        <header>
-            <h1><img src="imagens/logo.png"></h1>
-           
-           <nav> <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="produtos.html">Produtos</a></li>
-                <li><a href="contatos.html">Contatos</a></li>
-            </ul>
-        </nav>
-        </header>
 
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta title="Produtos - Barbearia Alura ">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="produtos.css">
+</head>
+
+<body>
+    <header>
+        <div class="caixa">
+            <h1><img src="imagens/logo.png"></h1>
+
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
+                    <li><a href="contatos.html">Contatos</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+</body>
+
 </html>
